2000-06-12  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlcolorset.c (html_colorset_set_style): Use ->base instead of
	->bg so we look like GtkEntry, GtkCList and the like.

2000-06-12  Radek Doulik  <rodo@helixcode.com>

	* keybindingsrc.emacs: added new bindings

	* keybindingsrc.ms: added new bindings

	* gtkhtml.c (command): new commands implementation

	* gtkhtml.h: new commands for align and indentation

	* gtkhtml.c (load_keybindings): fixed keybindings file path (added
	gtkhtml to it)

	* keybindingsrc.ms:  added font style bindings

	* keybindingsrc.emacs: added font style bindings

	* gtkhtml.c (command): new commands implementation

	* htmlengine-edit-fontstyle.c (html_engine_font_style_toggle): new
	function, used to toggle font style

	* gtkhtml.h: added new commands for font style toggling

	* Makefile.am (keybindings_DATA): added keybindingsrc.emacs and
	keybindingsrc.ms to EXTRA_DIST and let it install

	* gtkhtml.c (load_keybindings): load emacs keybindings (for now,
	later it will be selectable)

2000-06-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (libgtkhtml_la_SOURCES): removed
	gtkhtml-keybinding.[ch] as they are obsolete now - keybings are
	now in gtkhtml.[ch] + rc files

	* gtkhtml.c (class_init): three keybindings signals -
	scroll/cursor_move/command
	default keybindings moved to new function
	(load_keybindings): register default keybindings (+ load from file
	- to be completed)
	(register_enums): register new ENUM types for better rc bindings definition
	(scroll): scroll signal handler
	(cursor_move): cursor movement handler
	(command): command signal handler
	(key_press_event): rewritten, now it first tries activate
	keybindings, next insert text and if not handled forward it to parent

2000-06-09  Ariel Rios  <ariel@arcavia.com>

	* Makefile.am: Added htmlengine-edit-rule.c and html-engine-rule.h
	
	* htmlengine-edit-rule.h (html_engine_insert_rule): Added function for inserting an HTML rule.
